@@ -24,7 +24,7 @@
   </module>
 
   <module id="panel-windowlist-applet">
-    <cvs-directory>gnome-panel/help/window-lists</cvs-directory>
+    <cvs-directory>gnome-panel/help/window-list</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
