@@ -1,3 +1,7 @@
+2005-07-19  Danilo Šegan  <danilo@gnome.org>
+
+	* doc-l10n-status.py: Clean-ups and fixes.
+
 2005-07-18  Danilo Šegan  <danilo@gnome.org>
 
 	* modules.xml: Add panel-clock-applet, panel-fish-applet,
